--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Classes with Components</title>
 </head>
 <body>
-    <div id="root"></div>
+    <todo-element></todo-element>
     <script src="./script.js" type="module" defer ></script>
 </body>
 </html>
